@@ -28,6 +28,7 @@ Bugs fixed
 ----------
 
 - Bug 2992 - lte: Send method of the LteUeNetDevice doesn't use protocolNumber parameter
+- Bug 2997 - lte: EpcTft::PacketFilter::Matches does not use ipv6 address to match an IP packet
 
 Known issues
 ------------
